# LogShark

./: .gitignore  LICENSE  LogShark.py  README.md  pyproject.toml
.github/workflows/: test.yml
fixtures/: custom_log.txt  events.ndjson  windows_4625.txt
src/logshark/: __init__.py  __main__.py  cli.py  core.py
tests/: test_logshark.py
